--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,7 @@
+.container {
+    display: flex;
+}
+
 .table-block {
     display: inline-block;
 }
@@ -29,4 +33,10 @@ button {
     padding: 10px;
     color: #fff;
     width: 100%;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    margin-left: 40px;
 }
